<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/networkEditText"
        android:text="@string/network"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/networkEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/default_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:labelFor="@id/serverEditText"
        android:text="@string/server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/serverEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        android:inputType="number|text"
        android:minHeight="48dp"
        android:text="@string/default_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkEditText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:labelFor="@id/portEditText"
        android:text="@string/port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/portEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverEditText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portEditText" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/not_connected"
        app:layout_constraintStart_toEndOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@+id/portEditText" />

    <EditText
        android:id="@+id/byte0EditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_byte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/byte1EditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_byte"
        app:layout_constraintStart_toEndOf="@+id/byte0EditText"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/byte2EditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_byte"
        app:layout_constraintStart_toEndOf="@+id/byte1EditText"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/byte3EditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_byte"
        app:layout_constraintStart_toEndOf="@+id/byte2EditText"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/send"
        app:layout_constraintStart_toEndOf="@+id/byte3EditText"
        app:layout_constraintTop_toBottomOf="@+id/connectButton" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/output"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/byte0EditText"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>